# particle-systems

./: .gitignore  AngularSpring.cpp  AngularSpring.h  BlockSparseMatrix.cpp  BlockSparseMatrix.h  CMakeLists.txt  CircularWireConstraint.cpp  CircularWireConstraint.h  Constraint.h  FixedPointConstraint.cpp  FixedPointConstraint.h  Force.cpp  Force.h  GravityForce.cpp  GravityForce.h  JWJTranspose.cpp  JWJTranspose.h  Makefile  MouseSpringForce.cpp  MouseSpringForce.h  Particle.cpp  Particle.h  README.md  RodConstraint.cpp  RodConstraint.h  Solver.cpp  Solver.h  SpringForce.cpp  SpringForce.h  TinkerToy.cpp  imageio.cpp  imageio.h  linearSolver.cpp  linearSolver.h  project1
include/gfx/: vec2.h
